fix(note): Align note icon

--- a/src/_sass/components/_note.scss
+++ b/src/_sass/components/_note.scss
@@ -43,5 +43,6 @@
   &__icon {
     width: 16px;
     height: 16px;
+    margin-top: 4px;
   }
 }
